--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
 
 
 
-        <div class="content principal">
+        <div class="principal">
+            <main></main>
+
+        </div>
+
+
+
+
+        <div class="spazio">
+            <section> </section>
+
 
         </div>
 
