--- a/index.html
+++ b/index.html
@@ -38,7 +38,27 @@
 
         </div>
 
+        <div class="principal-2">
+            <main></main>
 
+        </div>
+
+
+        <div class="dati">
+            <main></main>
+
+        </div>
+
+        <div class="principal-2">
+            <main></main>
+
+        </div>
+
+
+        <div class="finale">
+            <main></main>
+
+        </div>
 
 
     </body>
