--- a/index.html
+++ b/index.html
@@ -4,19 +4,38 @@
         <meta charset="utf-8">
         <title>hubspot</title>
         <link rel="stylesheet" href="css/master.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato:900,700&display=swap" rel="stylesheet">
+
     </head>
     <body>
 
         <div class="navbar">
-            <nav> </nav>
+            <nav>
+                <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg" alt="logo">
 
-
+                <div id="navbar">
+                    <ul class="clearfix">
+                        <li><a href="#">Software</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Resources</a></li>
+                        <li><a href="#">Prtners</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </div>
+             </nav>
         </div>
 
 
 
         <div class="advisor">
-            <nav></nav>
+            <div class="advisor-avviso">
+                <div id="testo">
+                <p>Always easy. Now deeply powerful. We've packed even more enterprise features into HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.</p>
+                </div>
+                <button id="bottone" type="button" name="button">Learn more</button>
+
+
+            </div>
 
 
         </div>
