--- a/index.html
+++ b/index.html
@@ -33,19 +33,25 @@
                 <p>Always easy. Now deeply powerful. We've packed even more enterprise features into HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.</p>
                 </div>
                 <button id="bottone" type="button" name="button">Learn more</button>
-
-
             </div>
-
-
         </div>
 
 
 
 
         <div class="principal">
-            <main></main>
-
+            <main>
+                <div class="principal-titolo">
+                    <h1>There’s a better way to grow.</h1>
+                </div>
+                <div class="principal-testo">
+                    <small>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</small>
+                </div>
+                <button id="button" type="principal-button" name="button">Get Hubspot free</button>
+                <div class="principal-end">
+                    <h5>Get started with FREE tools, and upgrade as you grow.</h5>
+                </div>
+            </main>
         </div>
 
 
