quarta section pt.1

--- a/index.html
+++ b/index.html
@@ -64,7 +64,63 @@
         </div>
 
         <div class="principal-2">
-            <main></main>
+            <main>
+                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png" alt="">
+                <span id="titolo">
+                    <h3>Powerful alone. Better together.</h3>
+                </span>
+                <div id="descrizione">
+                    <small>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</small>
+                </div>
+                <div class="content">
+                    <div class="content-primo">
+
+                    </div>
+                    <div class="content-secondo">
+                        <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="">
+                        <h2>Marketing Hub</h2>
+                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <hr>
+                        <h4>Popular Features</h4>
+                        <ul>
+                            <li>Lead Generation</li>
+                            <li>Marketing Automation</li>
+                            <li>Analytics</li>
+                        </ul>
+                        <button type="button" name="button">Get started</button>
+                    </div>
+                    <div class="content-inmezzo">
+                        <div id="centrale">
+                            <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="">
+                            <h2>Marketing Hub</h2>
+                            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                            <hr>
+                            <h4>Popular Features</h4>
+                            <ul>
+                                <li>Lead Generation</li>
+                                <li>Marketing Automation</li>
+                                <li>Analytics</li>
+                            </ul>
+                            <button type="button" name="button">Get started</button>
+
+                        </div>
+                    </div>
+                    <div class="content-secondo">
+                        <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="">
+                        <h2>Marketing Hub</h2>
+                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <hr>
+                        <h4>Popular Features</h4>
+                        <ul>
+                            <li>Lead Generation</li>
+                            <li>Marketing Automation</li>
+                            <li>Analytics</li>
+                        </ul>
+                        <button type="button" name="button">Get started</button>
+                    </div>
+                </div>
+
+            </main>
 
         </div>
 
