quarta section finita

--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@
                 </div>
                 <div class="content">
                     <div class="content-primo">
+                        <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="">
+                        <button type="button" name="button">Get started</button>
+                        <h2>Marketing Hub</h2>
+                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <h4>Popular Features <hr></h4>
+                        <ul>
+                            <li>Lead Generation</li>
+                            <li>Marketing Automation</li>
+                            <li>Analytics</li>
+                        </ul>
+
+
+
+
 
                     </div>
                     <div class="content-secondo">
