--- a/index.html
+++ b/index.html
@@ -84,11 +84,6 @@
                             <li>Marketing Automation</li>
                             <li>Analytics</li>
                         </ul>
-
-
-
-
-
                     </div>
                     <div class="content-secondo">
                         <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="">
@@ -133,18 +128,50 @@
                         <button type="button" name="button">Get started</button>
                     </div>
                 </div>
-
             </main>
-
         </div>
 
 
         <div class="dati">
-            <main></main>
+            <main>
+                <span id="titolo">
+                    <h3>Learn and grow with award-winning support and a thriving community behind you.</h3>
+                </span>
+                <div id="descrizione">
+                    <small>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</small>
+                </div>
+                <div class="tabella">
+                    <div class="tabella-content">
+
+                    </div>
+                    <div class="tabella-content">
+
+                    </div>
+                    <div class="tabella-content">
+
+                    </div>
+                    <div class="tabella-content">
+
+                    </div>
+                    <br>
+                    <div class="tabella-content">
+
+                    </div>
+                    <div class="tabella-content">
+
+                    </div>
+                    <div class="tabella-content">
+
+                    </div>
+                    <div class="tabella-content">
+
+                    </div>
+                </div>
+            </main>
 
         </div>
 
-        <div class="principal-2">
+        <div class="principal-3">
             <main></main>
 
         </div>
