--- a/index.html
+++ b/index.html
@@ -141,30 +141,46 @@
                     <small>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</small>
                 </div>
                 <div class="tabella">
-                    <div class="tabella-content">
-
+                    <div class="tabella-content" id="uno">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+                        <h2>150+</h2>
+                        <p>HubSpot user groups</p>
                     </div>
-                    <div class="tabella-content">
-
+                    <div class="tabella-content" id="due">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+                        <h2>150+</h2>
+                        <p>HubSpot user groups</p>
                     </div>
-                    <div class="tabella-content">
-
+                    <div class="tabella-content" id="due">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+                        <h2>150+</h2>
+                        <p>HubSpot user groups</p>
                     </div>
-                    <div class="tabella-content">
-
+                    <div class="tabella-content" id="tre">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+                        <h2>150+</h2>
+                        <p>HubSpot user groups</p>
                     </div>
                     <br>
-                    <div class="tabella-content">
-
+                    <div class="tabella-content" id="quattro">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+                        <h2>150+</h2>
+                        <p>HubSpot user groups</p>
                     </div>
-                    <div class="tabella-content">
-
+                    <div class="tabella-content" id="cinque">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+                        <h2>150+</h2>
+                        <p>HubSpot user groups</p>
                     </div>
-                    <div class="tabella-content">
-
+                    <div class="tabella-content" id="cinque">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+                        <h2>150+</h2>
+                        <p>HubSpot user groups</p>
                     </div>
-                    <div class="tabella-content">
-
+                    <div class="tabella-content" id="sei">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+                        <h2>150+</h2>
+                        <p>HubSpot user groups</p>
                     </div>
                 </div>
             </main>
