--- a/index.html
+++ b/index.html
@@ -188,7 +188,75 @@
         </div>
 
         <div class="principal-3">
-            <main></main>
+            <main>
+                <div class="principal-3content">
+                    <h2>68,800</h2>
+                    <p>customers in over 100 countries growing their businesses with HubSpot</p>
+                </div>
+                <div class="principal-3marche">
+                    <div id="marche">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="">
+                    </div>
+                    <div id="marche">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="">
+                    </div>
+                    <div id="marche">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="">
+                    </div>
+                    <div id="marche">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="">
+                    </div>
+                    <br>
+                    <div id="marche">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="">
+                    </div>
+                    <div id="marche">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="">
+                    </div>
+                    <div id="marche">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="">
+                    </div>
+                    <div id="marche">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="">
+                    </div>
+                </div>
+
+
+                <div class="principal4">
+                    <div class="principal4-titolo">
+                        <h1>Start Growing With HubSpot Today</h1>
+                    </div>
+                    <div class="principal4-testo">
+                        <small>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</small>
+                    </div>
+                    <button id="button" type="principal-button" name="button">Get Hubspot free</button>
+                    <div class="principal4-end">
+                        <h5>Get started with FREE tools, or get more with our premium software.</h5>
+                    </div>
+                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Variation-1@2x.png" alt="">
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </main>
 
         </div>
 
