--- a/index.html
+++ b/index.html
@@ -235,15 +235,60 @@
                     </div>
                     <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Variation-1@2x.png" alt="">
                 </div>
+            </main>
+        </div>
 
 
-
-
-
-
-
-
-
+        <div class="finale">
+            <main>
+                <div class="liste">
+                    <ul>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                    </ul>
+                    <ul>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                    </ul>
+                    <ul>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                    </ul>
+                    <ul>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                        <li>aaaaaaaaa</li>
+                    </ul>
+                </div>
+                <div class="tasto">
+                    <button type="button" name="button">Get started</button>
+                </div>
+                <div class="footer">
+                    <div id="navbara">
+                        <ul class="clearfix">
+                            <li><a href="#">Software</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Resources</a></li>
+                            <li><a href="#">Prtners</a></li>
+                            <li><a href="#">About</a></li>
+                        </ul>
+                    </div>
+                </div>
 
 
 
@@ -257,12 +302,6 @@
 
 
             </main>
-
-        </div>
-
-
-        <div class="finale">
-            <main></main>
 
         </div>
 
