--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
         <meta charset="utf-8">
         <title>hubspot</title>
         <link rel="stylesheet" href="css/master.css">
-        <link href="https://fonts.googleapis.com/css?family=Lato:900,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,700&display=swap" rel="stylesheet">
 
     </head>
     <body>
+        <div class="navfix">
+            <div class="navfixdiv">
+                <nav>
+                    <div class="lingua">
+                    <span>English</span>
+                    </div>
+                    <div class="contatti">
+                    <span>Contact us</span>
+                    </div>
+                    <div class="login">
+                    <button type="button" name="button">Get Hubspot free</button>
+                    </div>
+                    <div class="gethub">
+                    <button type="button" name="button">Login</button>
+                    </div>
 
+
+
+
+
+                </nav>
+            </div>
+        </div>
         <div class="navbar">
             <nav>
                 <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg" alt="logo">
@@ -30,7 +52,7 @@
         <div class="advisor">
             <div class="advisor-avviso">
                 <div id="testo">
-                <p>Always easy. Now deeply powerful. We've packed even more enterprise features into HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.</p>
+                <p><strong>Always easy. Now deeply powerful. </strong> We've packed even more enterprise features into HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.</p>
                 </div>
                 <button id="bottone" type="button" name="button">Learn more</button>
             </div>
@@ -49,7 +71,7 @@
                 </div>
                 <button id="button" type="principal-button" name="button">Get Hubspot free</button>
                 <div class="principal-end">
-                    <h5>Get started with FREE tools, and upgrade as you grow.</h5>
+                    <p>Get started with FREE tools, and upgrade as you grow.</p>
                 </div>
             </main>
         </div>
@@ -70,7 +92,7 @@
                     <h3>Powerful alone. Better together.</h3>
                 </span>
                 <div id="descrizione">
-                    <small>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</small>
+                    <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
                 </div>
                 <div class="content">
                     <div class="content-primo">
@@ -243,64 +265,70 @@
             <main>
                 <div class="liste">
                     <ul>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
+                        <li>Increase your traffic</li>
+                        <li><a href="#">ad software</a></li>
+                        <li><a href="#">blog software</a></li>
+                        <li><a href="#">CEO software</a></li>
+                        <li><a href="#">Social Media Software</a></li>
+                        <li><a href="#">Content Management System</a></li>
+
+                    </ul>
+                    <ul>
+                        <li>Connect With Leads</li>
+                        <li><a href="#">Find New Prospects</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
                     </ul>
                     <ul>
                         <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
                     </ul>
                     <ul>
                         <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                    </ul>
-                    <ul>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
-                        <li>aaaaaaaaa</li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><a href="#">aaaaaaaa</a></li>
                     </ul>
                 </div>
                 <div class="tasto">
-                    <button type="button" name="button">Get started</button>
+                    <button type="button" name="button">Contact HubSpot Support</button>
                 </div>
                 <div class="footer">
-                    <div id="navbara">
+                    <hr>
+                    <div class="sceltalingue">
+                    <div id="lingue">
                         <ul class="clearfix">
-                            <li><a href="#">Software</a></li>
-                            <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Resources</a></li>
-                            <li><a href="#">Prtners</a></li>
-                            <li><a href="#">About</a></li>
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">Deutsch</a></li>
+                            <li><a href="#">Chinese</a></li>
+                            <li><a href="#">Espanol</a></li>
+                            <li><a href="#">Portugues</a></li>
+                            <li><a href="#">Francais</a></li>
                         </ul>
                     </div>
+                    </div>
+                    <div class="pie">
+                        <div id="logo">
+                            <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="">
+                            <p>Copyright © 2020 HubSpot, Inc.</p>
+                        </div>
+                        <div id="copiright">
+                            <ul>
+                                <li> <a href="#">Legal Stuff</a> </li>
+                                <li> <a href="#">Privacy Policy</a> </li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
             </main>
 
         </div>
