--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="content">
                     <div class="content-primo">
-                        <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="">
+                        <img src="https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/_style-guide/sword-sprocket/CRM-Illustration.svg" alt="">
                         <button type="button" name="button">Get started</button>
                         <h2>Marketing Hub</h2>
                         <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
@@ -265,37 +265,37 @@
             <main>
                 <div class="liste">
                     <ul>
-                        <li>Increase your traffic</li>
-                        <li><a href="#">ad software</a></li>
-                        <li><a href="#">blog software</a></li>
+                        <li><strong>Increase your traffic</strong></li>
+                        <li><a href="#">Ad software</a></li>
+                        <li><a href="#">Blog software</a></li>
                         <li><a href="#">CEO software</a></li>
                         <li><a href="#">Social Media Software</a></li>
                         <li><a href="#">Content Management System</a></li>
 
                     </ul>
                     <ul>
-                        <li>Connect With Leads</li>
-                        <li><a href="#">Find New Prospects</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><strong>Increase your traffic</strong></li>
+                        <li><a href="#">Ad software</a></li>
+                        <li><a href="#">Blog software</a></li>
+                        <li><a href="#">CEO software</a></li>
+                        <li><a href="#">Social Media Software</a></li>
+                        <li><a href="#">Content Management System</a></li>
                     </ul>
                     <ul>
-                        <li>aaaaaaaaa</li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><strong>Increase your traffic</strong></li>
+                        <li><a href="#">Ad software</a></li>
+                        <li><a href="#">Blog software</a></li>
+                        <li><a href="#">CEO software</a></li>
+                        <li><a href="#">Social Media Software</a></li>
+                        <li><a href="#">Content Management System</a></li>
                     </ul>
                     <ul>
-                        <li>aaaaaaaaa</li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
-                        <li><a href="#">aaaaaaaa</a></li>
+                        <li><strong>Increase your traffic</strong></li>
+                        <li><a href="#">Ad software</a></li>
+                        <li><a href="#">Blog software</a></li>
+                        <li><a href="#">CEO software</a></li>
+                        <li><a href="#">Social Media Software</a></li>
+                        <li><a href="#">Content Management System</a></li>
                     </ul>
                 </div>
                 <div class="tasto">
