--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
         <title>hubspot</title>
         <link rel="stylesheet" href="css/master.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:300,700&display=swap" rel="stylesheet">
-
+        <script src="https://kit.fontawesome.com/17664bd639.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="navfix">
             <div class="navfixdiv">
                 <nav>
                     <div class="lingua">
-                    <span>English</span>
+                        <i class="fas fa-globe-europe"></i>
+                        <span>English <i class="fas fa-caret-down"></i></span>
                     </div>
                     <div class="contatti">
-                    <span>Contact us</span>
+                        <span>Contact us</span>
                     </div>
                     <div class="login">
-                    <button type="button" name="button">Get Hubspot free</button>
+                        <button type="button" name="button">Get Hubspot free</button>
                     </div>
                     <div class="gethub">
-                    <button type="button" name="button">Login</button>
+                        <i class="fas fa-search"></i>
+                        <button type="button" name="button">Login</button>
                     </div>
 
 
@@ -37,11 +39,11 @@
 
                 <div id="navbar">
                     <ul class="clearfix">
-                        <li><a href="#">Software</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Resources</a></li>
-                        <li><a href="#">Prtners</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="#"><strong>Software </strong></a></li>
+                        <li><a href="#"><strong>Pricing</strong></a></li>
+                        <li><a href="#"><strong>Resources</strong></a></li>
+                        <li><a href="#"><strong>Partners</strong></a></li>
+                        <li><a href="#"><strong>About</strong></a></li>
                     </ul>
                 </div>
              </nav>
@@ -64,7 +66,7 @@
         <div class="principal">
             <main>
                 <div class="principal-titolo">
-                    <h1>There’s a better way to grow.</h1>
+                    <h1><strong>There’s a better way to grow.</strong></h1>
                 </div>
                 <div class="principal-testo">
                     <small>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</small>
@@ -102,9 +104,9 @@
                         <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
                         <h4>Popular Features <hr></h4>
                         <ul>
-                            <li>Lead Generation</li>
-                            <li>Marketing Automation</li>
-                            <li>Analytics</li>
+                            <li><i class="fas fa-check"> </i>Lead Generation</li>
+                            <li><i class="fas fa-check"></i>Marketing Automation</li>
+                            <li><i class="fas fa-check"></i>Analytics</li>
                         </ul>
                     </div>
                     <div class="content-secondo">
@@ -114,38 +116,38 @@
                         <hr>
                         <h4>Popular Features</h4>
                         <ul>
-                            <li>Lead Generation</li>
-                            <li>Marketing Automation</li>
-                            <li>Analytics</li>
+                            <li><i class="fas fa-check"></i>Lead Generation</li>
+                            <li><i class="fas fa-check"></i>Marketing Automation</li>
+                            <li><i class="fas fa-check"></i>Analytics</li>
                         </ul>
                         <button type="button" name="button">Get started</button>
                     </div>
                     <div class="content-inmezzo">
                         <div id="centrale">
-                            <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Sales-Professional-Illustration.svg" alt="">
                             <h2>Marketing Hub</h2>
                             <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
                             <hr>
                             <h4>Popular Features</h4>
                             <ul>
-                                <li>Lead Generation</li>
-                                <li>Marketing Automation</li>
-                                <li>Analytics</li>
+                                <li><i class="fas fa-check"></i>Lead Generation</li>
+                                <li><i class="fas fa-check"></i>Marketing Automation</li>
+                                <li><i class="fas fa-check"></i>Analytics</li>
                             </ul>
                             <button type="button" name="button">Get started</button>
 
                         </div>
                     </div>
                     <div class="content-secondo">
-                        <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Service-Hub-Illustration.svg" alt="">
                         <h2>Marketing Hub</h2>
                         <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
                         <hr>
                         <h4>Popular Features</h4>
                         <ul>
-                            <li>Lead Generation</li>
-                            <li>Marketing Automation</li>
-                            <li>Analytics</li>
+                            <li><i class="fas fa-check"></i>Lead Generation</li>
+                            <li><i class="fas fa-check"></i>Marketing Automation</li>
+                            <li><i class="fas fa-check"></i>Analytics</li>
                         </ul>
                         <button type="button" name="button">Get started</button>
                     </div>
@@ -213,7 +215,7 @@
             <main>
                 <div class="principal-3content">
                     <h2>68,800</h2>
-                    <p>customers in over 100 countries growing their businesses with HubSpot</p>
+                    <p>customers in over <strong>100</strong> countries growing their businesses with HubSpot</p>
                 </div>
                 <div class="principal-3marche">
                     <div id="marche">
@@ -300,6 +302,12 @@
                 </div>
                 <div class="tasto">
                     <button type="button" name="button">Contact HubSpot Support</button>
+                    <div class="tasto-social">
+                        <i class="fab fa-facebook-square"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
                 </div>
                 <div class="footer">
                     <hr>
