--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         </div>
         <div class="navbar">
             <nav>
-                <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg" alt="logo">
-
+                <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg" alt="">
                 <div id="navbar">
                     <ul class="clearfix">
                         <li><a href="#"><strong>Software </strong></a></li>
@@ -65,6 +64,7 @@
 
         <div class="principal">
             <main>
+                <img src="img/esercizio.png" alt="">
                 <div class="principal-titolo">
                     <h1><strong>There’s a better way to grow.</strong></h1>
                 </div>
