--- a/index.html
+++ b/index.html
@@ -25,11 +25,6 @@
                         <i class="fas fa-search"></i>
                         <button type="button" name="button">Login</button>
                     </div>
-
-
-
-
-
                 </nav>
             </div>
         </div>
@@ -38,18 +33,15 @@
                 <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg" alt="">
                 <div id="navbar">
                     <ul class="clearfix">
-                        <li><a href="#"><strong>Software </strong></a></li>
+                        <li><a href="#"><strong>Software </strong><i class="fas fa-caret-down"></i></a></li>
                         <li><a href="#"><strong>Pricing</strong></a></li>
-                        <li><a href="#"><strong>Resources</strong></a></li>
-                        <li><a href="#"><strong>Partners</strong></a></li>
-                        <li><a href="#"><strong>About</strong></a></li>
+                        <li><a href="#"><strong>Resources</strong><i class="fas fa-caret-down"></i></a></li>
+                        <li><a href="#"><strong>Partners</strong><i class="fas fa-caret-down"></i></a></li>
+                        <li><a href="#"><strong>About</strong><i class="fas fa-caret-down"></i></a></li>
                     </ul>
                 </div>
              </nav>
         </div>
-
-
-
         <div class="advisor">
             <div class="advisor-avviso">
                 <div id="testo">
@@ -58,10 +50,6 @@
                 <button id="bottone" type="button" name="button">Learn more</button>
             </div>
         </div>
-
-
-
-
         <div class="principal">
             <main>
                 <img src="img/esercizio.png" alt="">
@@ -77,16 +65,9 @@
                 </div>
             </main>
         </div>
-
-
-
-
         <div class="spazio">
             <section> </section>
-
-
         </div>
-
         <div class="principal-2">
             <main>
                 <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png" alt="">
@@ -154,8 +135,6 @@
                 </div>
             </main>
         </div>
-
-
         <div class="dati">
             <main>
                 <span id="titolo">
@@ -208,9 +187,7 @@
                     </div>
                 </div>
             </main>
-
         </div>
-
         <div class="principal-3">
             <main>
                 <div class="principal-3content">
@@ -244,8 +221,6 @@
                         <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="">
                     </div>
                 </div>
-
-
                 <div class="principal4">
                     <div class="principal4-titolo">
                         <h1>Start Growing With HubSpot Today</h1>
@@ -261,8 +236,6 @@
                 </div>
             </main>
         </div>
-
-
         <div class="finale">
             <main>
                 <div class="liste">
@@ -273,7 +246,6 @@
                         <li><a href="#">CEO software</a></li>
                         <li><a href="#">Social Media Software</a></li>
                         <li><a href="#">Content Management System</a></li>
-
                     </ul>
                     <ul>
                         <li><strong>Increase your traffic</strong></li>
@@ -340,7 +312,5 @@
             </main>
 
         </div>
-
-
     </body>
 </html>
